@startuml

title __FRIENDOVERVIEW's Class Diagram__\n

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        class DeleteFriendDialogue {
            + onAttach()
            + onCreateDialog()
        }
      }
    }
  }
  

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        interface DeleteFriendDialogueListener {
            {abstract} + onDialogPositiveClick()
            {abstract} + onDialogNegativeClick()
        }
      }
    }
  }
  

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        class FriendCardViewHolder {
            + friendName : TextView
            - mContext : Context
            - mCardView : CardView
            ~ FriendCardViewHolder()
            + confirmDelete()
        }
      }
    }
  }
  

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        class FriendOverviewAdapter {
            - mFriendList : List<Friend>
            - _fragment : Fragment
            + FriendOverviewAdapter()
            + onCreateViewHolder()
            + onBindViewHolder()
            ~ setRelationships()
            + getItemCount()
        }
      }
    }
  }
  

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        class FriendOverviewFragment {
            {static} + newInstance()
            + onCreateView()
            + onViewCreated()
            + onActivityCreated()
        }
      }
    }
  }
  

  package  {
    package com.avansprojects.antl {
      package com.avansprojects.antl.ui.friendOverview {
        class FriendOverviewViewModel {
            - allContacts : LiveData<List<Friend>>
            + FriendOverviewViewModel()
            - RefreshContacts()
            + getAllContacts()
            + insert()
        }
      }
    }
  }
  

  DeleteFriendDialogue -up-|> DialogFragment
  DeleteFriendDialogue o-- DeleteFriendDialogueListener : mListener
  DeleteFriendDialogue +-down- DeleteFriendDialogueListener
  SavedState -up-|> Parcelable
  FriendCardViewHolder -up-|> ViewHolder
  FriendCardViewHolder o-- FriendAddViewModel : mViewModel
  FriendOverviewAdapter -up-|> Adapter
  FriendOverviewFragment -up-|> Fragment
  FriendOverviewFragment o-- FriendOverviewViewModel : mViewModel
  SavedState -up-|> Parcelable
  FriendOverviewViewModel -up-|> AndroidViewModel
  FriendOverviewViewModel o-- ContactRepository : mContactRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
